<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="key_root">

    <PreferenceCategory
        android:key="jimmy_options_screen"
        android:title="Jimmy Options">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:id="@+id/pref_use_test_queries"
            android:key="useTestQueries"
            android:title="@string/pref_use_test_queries"/>

        <ListPreference
            android:defaultValue="0"
            android:id="@+id/pref_switch_answer_view"
            android:key="answerViewType"
            android:title="@string/pref_switch_answer_view"
            android:entries="@array/answerViews"
            android:entryValues="@array/answerViewsEntries"/>

        <EditTextPreference
            android:id="@+id/pref_api_url"
            android:key="@string/pref_api_url"
            android:title="@string/pref_api_url"
            android:dialogTitle="@string/pref_api_url"/>

        <Preference
            android:id="@+id/logout_button"
            android:key="@string/pref_logout"
            android:title="@string/pref_logout"/>

    </PreferenceCategory>

</PreferenceScreen>