<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context=".activity.AuthenticateActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/authenProgressView"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"/>

        <ScrollView
            android:id="@+id/authenFormView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

                <LinearLayout
                    android:id="@+id/authenFormLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/logo1"
                        android:cropToPadding="true"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/usernameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_username"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:inputType="text"
                            android:foregroundTint="@color/colorYellow"
                            android:textColorHint="@color/colorGreen"
                            android:textColor="@color/colorBlue"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:foregroundTint="@color/colorYellow"
                            android:textColorHint="@color/colorGreen"
                            android:textColor="@color/colorBlue"/>

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/authenButton"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold"
                        android:backgroundTint="@color/colorGreen"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>
